# ndn-mobile

./: Cargo.toml  README.md
.github/workflows/: mobile.yml
crates/ndn-boltffi/: Cargo.toml  boltffi.toml
crates/ndn-boltffi/src/: ble.rs  client.rs  codec.rs  dashboard.rs  discovery.rs  engine.rs  handlers.rs  identity_core.rs  lib.rs  offer.rs  remote_signer_client.rs  trust.rs  types.rs  wifi_aware.rs
crates/ndn-mobile/: Cargo.toml
crates/ndn-mobile/src/: bluetooth.rs  engine.rs  enroll.rs  lib.rs  object_relay.rs  tun.rs
crates/ndn-mobile/tests/: enroll_ca.rs  mgmt_handlers.rs  network_faces.rs  object_relay.rs  observability.rs  secured_mgmt.rs  tun_datapath.rs  webtransport.rs  wifi_aware.rs
examples/ripple-peer/: Cargo.toml
examples/ripple-peer/src/: main.rs
