[package]
name = "example-ripple-peer"
version = "0.0.0"
edition.workspace = true
publish = false

[[bin]]
name = "ripple-peer"
path = "src/main.rs"

[dependencies]
ndn-mobile   = { workspace = true }
ndn-app      = { workspace = true }
ndn-packet   = { workspace = true, features = ["std"] }
ndn-security = { workspace = true }
tokio      = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
anyhow     = { workspace = true }
bytes      = { workspace = true }
tracing-subscriber = { workspace = true }
